# gameboy

./: .gitignore  CMakeLists.txt  README
include/: cpu.h  decode.h  instruction.h  mmu.h  ops.h  rom.h  window.h
src/: cpu.c  decode.c  main.c  mmu.c  ops.c  window.c
